--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Benthos | Electronic Press Kit | Progressive Metal from Italy</title>
+    <title>Benthos | Official Website | Progressive Metal band from Italy</title>
   </head>
   <body>
     <div id="app"></div>
