--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benthos | Official Website | Progressive Metal band from Italy</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-J0DXTBPMNX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-J0DXTBPMNX')
+    </script>
   </head>
   <body>
     <div id="app"></div>
