--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="facebook-domain-verification" content="3bqfuzwi2dxnoza2uefkz6pf6nmh48" />
     <link rel="icon" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benthos | Official Website | Progressive Metal band from Italy</title>
