--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="icon" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benthos | Official Website | Progressive Metal band from Italy</title>
+    <meta
+      name="description"
+      content="Benthos' new album From Nothing, coming April 11th via InsideOutMusic. Pre-order now. Available in 180g Ltd. Clear-Black Marbled Vinyl, Digipak CD, and Jewelcase CD."
+    />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-J0DXTBPMNX"></script>
