⚡️ add keywords in metadata

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benthos | Official Website | Progressive Metal band from Italy</title>
     <meta
+      name="keywords"
+      content="Benthos, Benthos Band, Progressive Metal, From Nothing, Pre-Order, Vinyl, Fossil, Pure, As a Cordyceps, Italian Metal, Italian Band, Band from Milan, Italian Band, Inside Out Music, Italian Progressive Metal, Prog Metal, Mathcore, Avant-garde Metal"
+    />
+    <meta
       name="description"
-      content="Benthos' new album From Nothing, coming April 11th via InsideOutMusic. Pre-order now. Available in 180g Ltd. Clear-Black Marbled Vinyl, Digipak CD, and Jewelcase CD."
+      content="Benthos' new album From Nothing, coming April 11th via InsideOutMusic. Pre-order now. Available in 180g Ltd. Clear-Black Marbled Vinyl, Digipak CD, and Jewelcase CD. Includes As a Cordyceps, Pure, and Fossil. Benthos is a progressive metal/mathcore band from Milan, Italy."
     />
 
     <!-- Google tag (gtag.js) -->
