✨ add new merch stores

--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
       content="Benthos' new album From Nothing, coming April 11th via InsideOutMusic. Pre-order now. Available in 180g Ltd. Clear-Black Marbled Vinyl, Digipak CD, and Jewelcase CD. Includes As a Cordyceps, Pure, and Fossil. Benthos is a progressive metal/mathcore band from Milan, Italy."
     />
 
+    <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return
+        n = f.fbq = function () {
+          n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+        }
+        if (!f._fbq) f._fbq = n
+        n.push = n
+        n.loaded = !0
+        n.version = '2.0'
+        n.queue = []
+        t = b.createElement(e)
+        t.async = !0
+        t.src = v
+        s = b.getElementsByTagName(e)[0]
+        s.parentNode.insertBefore(t, s)
+      })(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js')
+      fbq('init', '820833708886679')
+      fbq('track', 'PageView')
+    </script>
+    <!-- End Meta Pixel Code -->
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-J0DXTBPMNX"></script>
     <script>
